fixes box video alignment

--- a/the_box/index.less
+++ b/the_box/index.less
@@ -149,7 +149,7 @@ html.has-shapes {
 
 [x-cp-video] {
   max-height: 100vh;
-  margin: auto 0;
+  margin: 0 auto;
   background: #111;
 }
 
